@startuml Kyro_Physical_ERD
title Kyro - Physical ERD by Service
left to right direction
hide circle
hide methods
skinparam linetype ortho
skinparam shadowing false

package "Auth Service · kyro_auth" {
  entity role {
    * id <<PK>>
    --
    name
  }
  entity users {
    * id <<PK>>
    --
    role_id <<FK>>
    email <<UK>>
    first_name, last_name
    phone, active, is_banned
  }
  entity address {
    * id <<PK>>
    --
    user_id <<FK>>
    full_name, phone_number
    province, district, ward, street
  }
}

package "Catalog Service · kyro_catalog" {
  entity category {
    * id <<PK>>
    --
    parent_category_id <<FK>>
    name <<UK>>
    level, is_parent
  }
  entity product {
    * id <<PK>>
    --
    category_id <<FK>>
    title, brand
    price, discounted_price
    quantity_sold
    average_rating, num_ratings
    description
  }
  entity image {
    * id <<PK>>
    --
    product <<FK>>
    download_url
    file_name, file_type
  }
  entity sizes {
    * id <<PK>>
    --
    product_id <<FK>>
    name, quantity
  }
  entity review {
    * id <<PK>>
    --
    product_id <<FK>>
    user_id <<external>>
    rating, review_content
    created_at
  }
}

package "Order Service · kyro_order" {
  entity order_address {
    * id <<PK>>
    --
    full_name, phone_number
    province, district, ward
    street, note
  }
  entity orders {
    * id <<PK>>
    --
    order_address <<FK>>
    user_id <<external>>
    user_email
    order_date, delivery_date
    order_status
    payment_method, payment_status
    original_price, total_discounted_price
    discount, total_items
  }
  entity order_item {
    * id <<PK>>
    --
    order_id <<FK>>
    product_id <<external>>
    product_name, product_image_url
    size, quantity, price
    discounted_price
  }
}

package "Payment Service · kyro_payment" {
  entity payment_details {
    * id <<PK>>
    --
    order_id <<external, UK>>
    payment_method, payment_status
    transaction_id
    total_amount, payment_date
    vnp_response_code
  }
}

role ||--o{ users
users ||--o{ address
category |o--o{ category
category ||--o{ product
product ||--o{ image
product ||--o{ sizes
product ||--o{ review
order_address ||--o{ orders
orders ||--o{ order_item

legend bottom
  Solid lines are physical foreign keys inside one database.
  Fields marked external are IDs owned by another service, not foreign keys.
endlegend
@enduml
